fixed dropdown overflow issue

--- a/static/base.css
+++ b/static/base.css
@@ -77,3 +77,8 @@ body {
         height: fill-available; /* Modern browsers */
     }
 }
+
+.dropdown-menu{
+    height:200px;
+    overflow-y:auto;
+}
